@@ -1,3 +1,8 @@
+Wed Feb 15 19:20:01 CET 2012 - Sebastian Siebert <freespacer@gmx.de>
+-------------------------------------------------------------------
+- update packaging script and fglrx.spec file
+  - remove unneeded ati-powermode.sh
+
 Sat Jan 07 19:51:51 CET 2012 - Sebastian Siebert <freespacer@gmx.de>
 -------------------------------------------------------------------
 - add auto detection for Balsam Professional
